		* Got rid of the deprecated HAVE_GETTEXT macros.
		* Added gettext support to amuleweb.
		* Added preferences option 'Allocate full size'.
		* Added crypt overhead to statistics, UDP only for now.
		* Added checks to prevent downloading large files to file systems not
		  supporting them.
		* Added check for NetBSD systems.
		* Heavy rewrite of autoconf/automake stuff.

	Hermit:
		* Patch for amulecmd history which ensures that when the same command
		  is repeated several times in a row it only gets recorded in the
		  history once.

	jcoy:
		* Set download priority in amulecmd.

	ken:
		* Fixed control-clicking (right-clicking) on tabs in notebooks on the
		  Mac.
		* Compilation fix for MacOSX 10.3
		* Fixed a crashing bug with static initialization order
		* Ship the license as required by the GPL.
		* Fixes linking of embedded CryptoPP (on the Mac, if nowhere else).
		* Quick-n-dirty hack for stats graphs on the Mac.

	Kry:
		* Protocol Obfuscation (enabled by default)
		* Large file support (>4GB)
		* Disabled auto-update of servers from clients and other servers by
		  default.
		* Fixed a bug while getting sources for large files (>4GB)
		* Fixed mldonkey_importer to work with mldonkey >= 2.7.6
		* Improve exception handling
		* Added a column on client view that shows if the user has reported
		  having disabled shared files.
		* Disable the "Show files" option in context menu if the user has
		  reported having disabled shared files.
		* Add generic CTag classes support for Kad data types
		* Remove kad IO classes
		* Safety on memfiles created from packets
		* Fixed publishing and sending shared files requests
		* Fixed Unittest
		* Update audio and video types
		* Update EC to use the equivalent of VBT tags
		* Fix ID sending on hello packet to use the hybrid ID instead of plain
		  ed2k id
		* Fix a bug on sending info to other clients on file list request
		* Upgrade lex generated code
		* Add the --reset-config flag